--- a/Front End Web Project/OnMobRec.html
+++ b/Front End Web Project/OnMobRec.html
@@ -14,9 +14,9 @@
             <li><i class="fa fa-server"></i><a href="About.html">About</a></li>
             <li><i class="fa fa-align-justify"></i>Plans
                 <ul>
-                    <li><a href="#">Mobile</a></li>
-                    <li><a href="#">DTH</a></li>
-                    <li><a href="#">Water</a></li>
+                    <li><a href="Mobile.html">Mobile</a></li>
+                    <li><a href="DTH1.html">DTH</a></li>
+                    <li><a href="water1.html">Water</a></li>
                 </ul>
             </li>
             <li><i class="fa fa-sign-in-alt" aria-hidden="true"></i><a href="Login.html">Login</a></li>
@@ -31,17 +31,17 @@
         <i class="fa fa-mobile"></i>
         <h2>Mobile</h2>
         <h2>Recharge</h2>
-        <p><span>Click</span><a href="#">Here</a></p>
+        <p><span>Click</span><a href="Recharge.html">Here</a></p>
     </div>
     <div class="grid2">
         <i class="fa fa-tv"></i>
         <h1>DTH</h1>
-        <p><span>Click</span><a href="#">Here</a></p>
+        <p><span>Click</span><a href="DTH.html">Here</a></p>
     </div>
     <div class="grid3">
         <i class="fa fa-tint"></i>
         <h1>Water</h1>
-        <p><span>Click</span><a href="#">Here</a></p>
+        <p><span>Click</span><a href="Water.html">Here</a></p>
     </div>
     </body>
 </html>
