--- a/Front End Web Project/DTH1.html
+++ b/Front End Web Project/DTH1.html
@@ -6,23 +6,23 @@
     <body>
         <h1>DTH</h1>
         <div class="grid1">
-            <a href="href"><img src="sundirect-removebg-preview.png" style="width: 220px;height: 140px"></a>
+            <a href="sundirect.html"><img src="sundirect-removebg-preview.png" style="width: 220px;height: 140px"></a>
             <p>SunDirect</p>
         </div>
         <div class="grid2">
-            <a href="href"><img src="dishtv-removebg-preview.png" style="width: 150px;height: 150px"></a>
+            <a href="dishtv.html"><img src="dishtv-removebg-preview.png" style="width: 150px;height: 150px"></a>
             <p>DishTV</p>
         </div>
         <div class="grid3">
-            <a href="href"><img src="tatasky-removebg-preview.png" style="width: 150px;height: 150px"></a>
+            <a href="tatasky.html"><img src="tatasky-removebg-preview.png" style="width: 150px;height: 150px"></a>
             <p>TATASky</p>
         </div>
         <div class="grid4">
-            <a href="href"><img src="airtel-removebg-preview.png" style="width: 200px;height: 150px"></a>
+            <a href="airtel1.html"><img src="airtel-removebg-preview.png" style="width: 200px;height: 150px"></a>
             <p>Airtel</p>
         </div>
         <div class="grid5">
-            <a href="href"><img src="d2h-removebg-preview.png" style="width: 250px;height: 160px:background-color:white;"></a>
+            <a href="d2h.html"><img src="d2h-removebg-preview.png" style="width: 250px;height: 160px:background-color:white;"></a>
             <p>d2h</p>
         </div>
     </body>
