--- a/Front End Web Project/Recharge.html
+++ b/Front End Web Project/Recharge.html
@@ -8,13 +8,15 @@
             <h2>Mobile Recharge</h2>
             <form>
                 <select type="dropdown1" required>
-                <option value="Prepaid" selected>Prepaid</option>
-                <option value="Postpaid">Postpaid</option></select>
+                    <option value="Prepaid" selected>Prepaid</option>
+                    <option value="Postpaid">Postpaid</option>
+                </select>
                 <input type="text" placeholder="Mobile Number" required>
                 <select type="dropdown" required>
-                <option value="Aitel" selected>Airtel</option>
-                <option value="Jio">Jio</option>
-                <option value="VI">VI</option></select>
+                    <option value="Aitel" selected>Airtel</option>
+                    <option value="Jio">Jio</option>
+                    <option value="VI">VI</option>
+                </select>
                 <input type="text"  placeholder="Enter Amount" required>
                 <input type="submit" onclick="submit()" value="Proceed to Recharge">
             </form>
