--- a/Front End Web Project/Mobile.html
+++ b/Front End Web Project/Mobile.html
@@ -6,15 +6,15 @@
     <body>
         <h1>MOBILE</h1>
         <div class="grid1">
-            <a href="href"><img src="1024px-Reliance_Jio_Logo_(October_2015).svg.png" style="width: 150px;height: 150px"></a>
+            <a href="jio.html"><img src="1024px-Reliance_Jio_Logo_(October_2015).svg.png" style="width: 150px;height: 150px"></a>
             <p>Jio</p>
         </div>
         <div class="grid2">
-            <a href="href"><img src="wp2408138-removebg-preview.png" style="width: 200px;height: 150px"></a>
+            <a href="Airtel.html"><img src="wp2408138-removebg-preview.png" style="width: 200px;height: 150px"></a>
             <p>Airtel</p>
         </div>
         <div class="grid3">
-            <a href="href"><img src="download-removebg-preview.png" style="width: 350px;height: 150px;"></a>
+            <a href="VI.html"><img src="download-removebg-preview.png" style="width: 350px;height: 150px;"></a>
             <p>VI</p>
         </div>
     </body>
