--- a/Front End Web Project/Contact.html
+++ b/Front End Web Project/Contact.html
@@ -2,6 +2,12 @@
 <html>
     <head>
         <link rel="stylesheet" href="sudheer29.css">
+        <script>
+            function ABC()
+            {
+                confirm("You want to submit\n Press the Button.")
+            }
+        </script>
     </head>
     <body>
         <div>
