--- a/Front End Web Project/OnMobRec.html
+++ b/Front End Web Project/OnMobRec.html
@@ -42,5 +42,8 @@
         <h1>Water</h1>
         <p><span>Click</span><a href="Water.html">Here</a></p>
     </div>
+    <div class="grid">
+        <p>ReCharge<span> From</span> AnyWhere,<span1>  AnyTime.</span1></p>
+    </div>
     </body>
 </html>
