--- a/Front End Web Project/VI.html
+++ b/Front End Web Project/VI.html
@@ -17,19 +17,19 @@
                 <td>1GB</td>
                 <td>28 Days</td>
                 <td>Enjoy TRULY unlimited Local, STD & Roaming calls on any network,<br>1 GB data per day, 100 National SMS/day for 28 days</td>
-                <td><a href="Recharge.html"><input type="submit" onclick="submit()" value="Rs.219"></td>
+                <td><a href="Recharge.html"><input type="submit" onclick="submit()" value="Rs.219"></a></td>
             </tr>
             <tr>
                 <td>1GB</td>
                 <td>24 Days</td>
                 <td>3G/4G Data: 1 GB. Local, STD & Roaming Calls: Unlimited. SMS: 300 SMS</td>
-                <td><a href="Recharge.html"><input type="submit" onclick="submit()" value="Rs.129"></td>
+                <td><a href="Recharge.html"><input type="submit" onclick="submit()" value="Rs.129"></a></td>
             </tr>
             <tr>
                 <td>1GB</td>
                 <td>24 Days</td>
                 <td>3G/4G Data: 1 GB / Day. Local, STD & Roaming Calls: Unlimited.<br>SMS: 100 SMS / Day   </td>
-                <td><a href="Recharge.html"><input type="submit" onclick="submit()" value="Rs.199"></td>
+                <td><a href="Recharge.html"><input type="submit" onclick="submit()" value="Rs.199"></a></td>
             </tr>
             </table></center>
         <center><table>
