--- a/Front End Web Project/Water.html
+++ b/Front End Web Project/Water.html
@@ -6,14 +6,15 @@
     <body>
         <div class="nani">
             <p>Water</p>
-            <form>
-                <select type="dropdown">
-                <option value="Sun Direct" selected>Banglore(BWSSB)</option>
+            <form onclick="validate()">
+                <select type="dropdown" id="login">
+                <option value="select" selected>    Select</option>
+                <option value="Sun Direct">Banglore(BWSSB)</option>
                 <option value="Dish Tv">NewDelhi(NDMC)</option>
                 <option value="TATA Sky">Hyderabad(GHMC)</option>
                 <option value="Aitel">Phagwara(PMC)</option>
                 <option value="Videocon">Chennai(CMC)</option></select>
-                <input type="text" placeholder="Connection ID">
+                <input type="text" placeholder="Connection ID" id="login1" required>
                 <input type="submit" onclick="submit()" value="Proceed to Pay">
             </form>
         </div>
