--- a/Front End Web Project/DTH.html
+++ b/Front End Web Project/DTH.html
@@ -8,15 +8,17 @@
             <p>DTH</p>
             <form>
                 <select type="dropdown">
-                <option value="Sun Direct" selected>Sun Direct</option>
+                <option value="select" selected>Select</option>
+                <option value="Sun Direct">Sun Direct</option>
                 <option value="Dish Tv">Dish Tv</option>
                 <option value="TATA Sky">TATA Sky</option>
                 <option value="Aitel">Airtel</option>
                 <option value="Videocon">d2h</option>
-                <input type="text" placeholder="Enter amount">
+                <input type="text" placeholder="Enter amount" required>
                 <input type="submit" onclick="submit()" value="Proceed to Recharge">
                 </select>
             </form>
         </div>
+        <a href="DTH1.html">Plans</a>
     </body>
 </html>
