--- a/Front End Web Project/DTH1.html
+++ b/Front End Web Project/DTH1.html
@@ -6,7 +6,7 @@
     <body>
         <h1>DTH</h1>
         <div class="grid1">
-            <a href="sundirect.html"><img src="sundirect-removebg-preview.png" style="width: 220px;height: 140px"></a>
+            <a href="sundirect.html"><img src="sundirect-removebg-preview.png" style="width: 230px;height: 150px"></a>
             <p>SunDirect</p>
         </div>
         <div class="grid2">
@@ -22,7 +22,7 @@
             <p>Airtel</p>
         </div>
         <div class="grid5">
-            <a href="d2h.html"><img src="d2h-removebg-preview.png" style="width: 250px;height: 160px:background-color:white;"></a>
+            <a href="d2h.html"><img src="d2h-removebg-preview.png" style="width: 250px;height:150px;"></a>
             <p>d2h</p>
         </div>
     </body>
