--- a/Front End Web Project/Recharge.html
+++ b/Front End Web Project/Recharge.html
@@ -5,15 +5,17 @@
     </head>
     <body>
         <div class="nani">
-            <h2>Mobile Recharge</h2>
-            <form>
+            <p>Mobile Recharge</p>
+            <form onsubmit="validate()">
                 <select type="dropdown1" required>
-                    <option value="Prepaid" selected>Prepaid</option>
+                    <option value="select" selected>Select</option>
+                    <option value="Prepaid">Prepaid</option>
                     <option value="Postpaid">Postpaid</option>
                 </select>
-                <input type="text" placeholder="Mobile Number" required>
+                <input type="text" placeholder="Mobile Number" name="sudheer" pattern="^\d{4}-\d{3}-\d{4}$" required>
                 <select type="dropdown" required>
-                    <option value="Aitel" selected>Airtel</option>
+                    <option value="select" selected>Select</option>
+                    <option value="Aitel">Airtel</option>
                     <option value="Jio">Jio</option>
                     <option value="VI">VI</option>
                 </select>
@@ -21,5 +23,6 @@
                 <input type="submit" onclick="submit()" value="Proceed to Recharge">
             </form>
         </div>
+        <a href="Mobile.html">Plans</a>
     </body>
 </html>
