--- a/Front End Web Project/Signup.html
+++ b/Front End Web Project/Signup.html
@@ -3,17 +3,37 @@
     <head>
         <link rel="stylesheet" href="sudheer27.css">
         <a href="ONMOBREC.html">Home Page</a>
+        <script>
+            function validate()
+            {
+                var password=document.getElementById("ps").value,
+                    confirmpassword=document.getElementById("cnps").value;
+                if(password != confirmpassword)
+                {
+                    alert("Password is not match,try again");
+                    return true;
+                }
+                else
+                    {
+                        var signup = confirm("you can go next step");
+                        
+                    }
+                return true;
+            }
+    </script>
+        <script>
+        </script>
     </head>
     <body>
         <div class="nani">
-            <form action="Register.html">
+            <form onsubmit="validate()" action="Register.html" name="signup">
                 <p>SignUp</p>
-                <input type="text" name="" placeholder="Firstname" required>
-                <input type="text" name="" placeholder="lastname" required>
-                <input type="date" name="" placeholder="DOB">
-                <input type="password" name="" placeholder="password">
-                <input type="confirmpassword" name="" placeholder="confirmpassword">
-                <input type="submit" onclick="submit()" value="Next">
+                <input type="text"  name=""placeholder="Firstname" id="fn" required>
+                <input type="text" name=""placeholder="lastname" id="ln" required>
+                <input type="date" name=""placeholder="DOB" id="date" required>
+                <input type="password" name="" placeholder="password" id="ps" required>
+                <input type="confirmpassword" name="" placeholder="confirmpassword" id="cnps" required>
+                <input type="submit" onclick="Register()" value="Next">
             </form>
         </div>
     </body>
